tests/transpiler/x/pl/pure_global_fold.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/pure_global_fold.pl:2: Initialization goal raised exception:
ERROR: is/2: Arguments are not sufficiently instantiated
